// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Flex Component correctly 1`] = `
<div
  className="sc-htpNat gPNHok"
  rows="4rem 20rem"
>
  <div
    className="sc-bxivhb fJzdIF"
  >
    <div
      className="sc-eNQAEJ fcVFnE"
    >
      Header
    </div>
  </div>
  <div
    className="sc-bxivhb dwDvly"
  >
    <div
      className="sc-eNQAEJ fcVFnE"
    >
      Sidebar
    </div>
  </div>
  <div
    className="sc-bxivhb kiaMgL"
  >
    <div
      className="sc-eNQAEJ fcVFnE"
    >
      Body
    </div>
  </div>
</div>
`;

exports[`renders the Flex Component correctly 2`] = `
<div
  className="sc-htpNat iIinON"
  rows="4rem 20rem"
>
  <div
    className="sc-bxivhb fJzdIF"
  >
    <div
      className="sc-eNQAEJ fcVFnE"
    >
      Header
    </div>
  </div>
  <div
    className="sc-bxivhb dwDvly"
  >
    <div
      className="sc-eNQAEJ fcVFnE"
    >
      Sidebar
    </div>
  </div>
  <div
    className="sc-bxivhb kiaMgL"
  >
    <div
      className="sc-eNQAEJ fcVFnE"
    >
      Body
    </div>
  </div>
</div>
`;
